--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
       }
     },
     {
-      "src": "client/index.html",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist/public"
