Fix API routing structure to handle dynamic URL parameters correctly

--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,18 @@
   ],
   "routes": [
     {
+      "src": "/api/financial/revenue/(.*)",
+      "dest": "/api/financial/revenue"
+    },
+    {
+      "src": "/api/financial/expenses/(.*)",
+      "dest": "/api/financial/expenses"
+    },
+    {
+      "src": "/api/analytics/key-metrics/(.*)",
+      "dest": "/api/analytics/key-metrics"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "/api/$1"
     },
