--- a/vercel.json
+++ b/vercel.json
@@ -9,14 +9,18 @@
       }
     },
     {
-      "src": "dist/index.js",
+      "src": "api/index.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/index.ts"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/dist/index.js"
+      "dest": "/dist/public/$1"
     }
   ],
   "env": {
