fix: resolve build errors

--- a/vercel.json
+++ b/vercel.json
@@ -46,19 +46,14 @@
     {
       "source": "/api/health",
       "destination": "/api/health.ts"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
     },
     {
-      "handle": "filesystem"
+      "source": "/assets/(.*)",
+      "destination": "/assets/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
