--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tanstack/react-query": "^5.60.5",
     "@types/chart.js": "^2.9.41",
     "@vercel/node": "^5.3.23",
+    "bcrypt": "^6.0.0",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -90,6 +91,7 @@
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
+    "@types/bcrypt": "^6.0.0",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
