--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "version": 2,
   "buildCommand": "npm run build:client",
   "outputDirectory": "dist/public",
+  "includeFiles": [
+    "shared/**"
+  ],
   "rewrites": [
     {
       "source": "/api/auth/:path*",
